--- a/src/Pages/Banner/Banner.css
+++ b/src/Pages/Banner/Banner.css
@@ -1,21 +1,73 @@
-/* .banner{
-    height: 80vh;
-} */
+.banner-text{
+    overflow: hidden;
+    transform: scale();
+}
 .aniText{
     color: red;
 }
 
 .banner-button{
-    background: linear-gradient(to right,rgba(255,0,0,1), rgba(221, 212, 212, 0.089));
-    padding: 13px 30px;
-    outline: none;
+    padding: 15px 50px;
     border: none;
-    border-radius: 15px;
-    transition: 0.5s;
+    outline: none;
+    color: #fff;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 12px;
 }
-.banner-button:hover{
-    /* background: linear-gradient(to right,rgba(255,0,0,1), rgba(221, 212, 212, 0.089)); */
-    background-color: red;
+
+.banner-button::after{
+    content: "";
+    z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+/* glow */
+
+.banner-button::before{
+    content: "";
+    background: linear-gradient(
+        45deg,
+        #ff0000,#ff7300,#fffB00,#48ff00,
+        #00ffD5,#002Bff,#ff00c8
+    );
+
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 600%;
+    z-index: -1;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    filter: blur(8px);
+
+    animation: glowing 20s linear infinite;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+    opacity: 0;
+}
+@keyframes glowing{
+    0%{background-position: 0 0;}
+    50%{background-position:400% 0;}
+    100%{background-position:0 0;}
+}
+
+.banner-button:hover::before{
+    opacity: 1;
+}
+
+.banner-button:active:after{
+    background: transparent;
+}
+.banner-button:active{
+  color: #000;
+  font-weight: bold;
 }
 
 .banner-button a{
