--- a/src/Pages/MyWork/MyWork.css
+++ b/src/Pages/MyWork/MyWork.css
@@ -1,96 +1,108 @@
-.mywork{
-    min-height: 150vh;
+.mywork {
+  min-height: 150vh;
+  overflow-x: hidden;
 }
 
-.cardd{
-    width: 90%;
-    max-width: 440px;
-    color: #fff;
-    padding: 50px 35px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    height: 450px;
-    transition: 0.5s;
+.cardd {
+  width: 90%;
+  max-width: 440px;
+  color: #fff;
+  padding: 50px 35px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  height: 450px;
+  transition: 0.5s;
 }
 
-.cardd:hover{
-   background: #292524;
+.cardd:hover {
+  background: #292524;
 }
 
-.description{
-    height: 310px;
+.description {
+  height: 310px;
 }
 
 /* btn design  */
 
-.workBtn{
-    padding: 15px 50px;
-    border: none;
-    outline: none;
-    color: #fff;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    border-radius: 12px;
+.workBtn {
+  padding: 15px 50px;
+  border: none;
+  outline: none;
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 12px;
 }
 
-.workBtn::after{
-    content: "";
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(66, 62, 62);
-    left: 0;
-    top: 0;
-    border-radius: 10px;
+.workBtn::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(66, 62, 62);
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
 /* glow */
 
-.workBtn::before{
-    content: "";
-    background: linear-gradient(
-        45deg,
-        #ff0000,#ff7300,#fffB00,#48ff00,
-        #00ffD5,#002Bff,#ff00c8
-    );
+.workBtn::before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #ff00c8
+  );
 
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    background-size: 600%;
-    z-index: -1;
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    filter: blur(8px);
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 600%;
+  z-index: -1;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  filter: blur(8px);
 
-    animation: glowing 20s linear infinite;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-    opacity: 0;
+  animation: glowing 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+  opacity: 0;
 }
-@keyframes glowing{
-    0%{background-position: 0 0;}
-    50%{background-position:400% 0;}
-    100%{background-position:0 0;}
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
 }
 
-.workBtn:hover::before{
-    opacity: 1;
+.workBtn:hover::before {
+  opacity: 1;
 }
 
-.workBtn:active:after{
-    background: transparent;
+.workBtn:active:after {
+  background: transparent;
 }
-.workBtn:active{
+.workBtn:active {
   color: #000;
   font-weight: bold;
 }
 
-.workBtn a{
-    text-decoration: none;
-    color: white;
+.workBtn a {
+  text-decoration: none;
+  color: white;
 }
